--- a/Hello-World-Exercicio/index.html
+++ b/Hello-World-Exercicio/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <footer>
-        <p>Uma página desenvolvida por Alura Start</p>
+        <p>Uma página desenvolvida por alunos</p>
     </footer>
     <script src="main.js"></script>
 </body>
